# fzf-pim

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  hatch_build.py  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
fomo/: __init__.py  __main__.py  _version.py  app.py  app.tcss  azure.py  demo.py  tiering.py
fomo/screens/: activation_screen.py  assignments_screen.py  entra_screen.py  roles_screen.py  scope_screen.py
fzf_pim/: __init__.py  __main__.py  _version.py  app.py  app.tcss  azure.py  tiering.py
fzf_pim/screens/: activation_screen.py  assignments_screen.py  entra_screen.py  roles_screen.py  scope_screen.py
man/: fomo.1.include  fzf-pim.1.include
scripts/: screenshot.py
tests/: test_cli.py  test_version.py
