[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fzf-pim"
dynamic = ["version"]
description = "TUI for Azure PIM role activation with multiselect"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
fzf-pim = "fzf_pim.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["fzf_pim"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fzf_pim/_version.py"
