[build-system]
requires = ["hatchling", "hatch-vcs", "argparse-manpage"]
build-backend = "hatchling.build"

[project]
name = "fomo"
dynamic = ["version"]
description = "TUI for Azure PIM role activation with multiselect"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
fomo = "fomo.__main__:main"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["fomo"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fomo/_version.py"
